--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>Vie</title>
+    <title>Jesus Perea</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" />
