changes to working sites

--- a/index.html
+++ b/index.html
@@ -253,58 +253,38 @@
                     <div class="col-md-6 items graphic lg-mr wow fadeInUp" data-wow-delay=".4s">
                         <div class="item-img">
                             <div class="cont">
-                                <h6>Midnight Motorsports</h6>
-                                <p>Web app in progress for a local auto shop</p>
+                                <h6> Nissan Z-Lineup</h6>
+                                <p>Web app designed to provide user with the Nissan z lineup information</p>
                             </div>
-                            <a href="https://midnight-motorsports-nextjs.herokuapp.com/about"
-                                target="https://midnight-motorsports-nextjs.herokuapp.com/about" class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649916198/my%20portfolio/midnight_kqwbkn.png"
+                            <a href="https://boiling-chamber-50325.herokuapp.com/"
+                                target="https://boiling-chamber-50325.herokuapp.com/" class="rota">
+                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1682099505/my%20portfolio/zlineup_jbgpyg.png"
                                     alt="web app screenshot">
                                 <div class="item-img-overlay"></div>
                             </a>
                             <div class="tags">
                                 <span>
-                                    <a href="#0">Reactjs</a>
+                                    <a href="#0">Html</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Nextjs</a>
+                                    <a href="#0">Css</a>
                                 </span>
                                 <span>
-                                    <a href="#0">GraphQL</a>
+                                    <a href="#0">Javascript</a>
                                 </span>
                                 <span>
-                                    <a href="#0">MongoDB</a>
+                                    <a href="#0">Nodejs</a>
+                                </span>
+                                <span>
+                                    <a href="#0">Expressjs</a>
+                                </span>
+                                <span>
+                                    <a href="#0">MySQL</a>
                                 </span>
                             </div>
                         </div>
                     </div>
 
-                    <!-- gallery item -->
-                    <div class="col-md-6 items web wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <div class="cont">
-                                <h6>The Sushi Spot</h6>
-                                <p>A japanese restaurant Template</p>
-                            </div>
-                            <a href="https://sushi-spot.herokuapp.com" target="https://sushi-spot.herokuapp.com"
-                                class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649916697/my%20portfolio/sushi_yoihbl.png"
-                                    alt="web app screenshot">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                            <div class="tags">
-                                <span>
-                                    <a href="#0">Reactjs</a>
-                                </span>
-                                <span>
-                                    <a href="#0">Styled Components</a>
-                                </span>
-                                <span>
-                                    <a href="#0">MongoDB</a>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
 
                     <!-- gallery item -->
                     <div class="col-md-6 items web wow fadeInUp" data-wow-delay=".4s">
@@ -346,40 +326,13 @@
                             </div>
                             <a href="https://codesforjenuel.github.io/3sky-weather/"
                                 target="https://codesforjenuel.github.io/3sky-weather/" class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649917677/my%20portfolio/3sky_y7dx4q.png"
+                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1682099804/my%20portfolio/3sky_iuah2s.png"
                                     alt="Web app screenshot">
                                 <div class="item-img-overlay"></div>
                             </a>
                             <div class="tags">
                                 <span>
-                                    <a href="#0">HTML</a>
-                                </span>
-                                <span>
-                                    <a href="#0">Fitnes</a>
-                                </span>
-                                <span>
-                                    <a href="#0">Creative</a>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- gallery item -->
-                    <div class="col-md-6 items brand wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <div class="cont">
-                                <h6>Coding Quiz</h6>
-                                <p>One of the homeworks from the bootcamp</p>
-                            </div>
-                            <a href="https://codesforjenuel.github.io/codingquiz/"
-                                target="https://codesforjenuel.github.io/codingquiz/" class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649918958/my%20portfolio/codingquiz_vfdjvd.png"
-                                    alt="Web app Screenshot">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                            <div class="tags">
-                                <span>
-                                    <a href="#0">HTML</a>
+                                    <a href="#0">Html</a>
                                 </span>
                                 <span>
                                     <a href="#0">Css</a>
@@ -387,9 +340,17 @@
                                 <span>
                                     <a href="#0">Javascript</a>
                                 </span>
+                                <span>
+                                    <a href="#0">Localstorage</a>
+                                </span>
+                                <span>
+                                    <a href="#0">Api</a>
+                                </span>
                             </div>
                         </div>
                     </div>
+
+
 
                     <!-- gallery item -->
                     <div class="col-md-6 items brand wow fadeInUp" data-wow-delay=".4s">
@@ -400,7 +361,7 @@
                             </div>
                             <a href="https://ernie2021.github.io/teamprojectone/"
                                 target="https://ernie2021.github.io/teamprojectone/" class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649919180/my%20portfolio/esports_qgzxqm.png"
+                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1682101253/my%20portfolio/esports_pjo281.png"
                                     alt="Web app screenshot">
                                 <div class="item-img-overlay"></div>
                             </a>
