updated the image and deleted the contact section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img">
-                        <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649911911/my%20portfolio/profilepic_d9nlgz.jpg"
+                        <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1682101569/my%20portfolio/80809023_ntljna.png"
                             alt="">
                     </div>
                 </div>
@@ -674,7 +674,7 @@
 
     <!-- ==================== Start Contact ==================== -->
 
-    <section class="contact-sec style2 section-padding position-re">
+    <!-- <section class="contact-sec style2 section-padding position-re">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-10">
@@ -732,7 +732,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- ==================== End Contact ==================== -->
 
