update latest information on the latest Drivers Addiction website, the current years of experience, phone number and technologies

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img">
-                        <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1682101569/my%20portfolio/80809023_ntljna.png"
+                        <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1700425472/my%20portfolio/sT8fGh5F_400x400_a7bfyp.jpg"
                             alt="">
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <ul class="flex">
                         <li class="flex">
                             <div class="numb valign">
-                                <h3>1</h3>
+                                <h3>3</h3>
                             </div>
                             <div class="text valign">
                                 <p>Year <br> Of Experience</p>
@@ -118,7 +118,7 @@
 
                         <li class="flex">
                             <div class="numb valign">
-                                <h3>10</h3>
+                                <h3>13</h3>
                             </div>
                             <div class="text valign">
                                 <p>Projects Completed</p>
@@ -174,7 +174,7 @@
                         </div>
                         <div class="cont">
                             <h6>Front End</h6>
-                            <p>HTML, Css, Javascript, & Reactjs</p>
+                            <p>HTML, Css, Tailwind CSS, Bootstrap, Javascript, & Reactjs with Vite</p>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="cont">
                             <h6>Web & Mobile Responsiveness</h6>
-                            <p>Flexbox, Media Queries, & Bootstrap</p>
+                            <p>Flexbox, Media Queries, Tailwind Css & Bootstrap</p>
                         </div>
                     </div>
                 </div>
@@ -290,13 +290,12 @@
                     <div class="col-md-6 items web wow fadeInUp" data-wow-delay=".4s">
                         <div class="item-img">
                             <div class="cont">
-                                <h6>Todo List</h6>
-                                <p>Web app design to create task for everyday usage</p>
+                                <h6>Drivers Addiction</h6>
+                                <p>A platform for car enthusiast to find information on drivers chosen every week to be honored, also includes a page for trending news, latest video on the driver addiction youtube channel along with 3 latest shorts and a page that is only visible for the page administrator once logged in and authenticated that will allow to post, delete and update data on every page. </p>
                             </div>
-                            <a href="https://online-todo-list.herokuapp.com/"
-                                target="https://online-todo-list.herokuapp.com/" class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649917370/my%20portfolio/todo_aguebp.png"
-                                    alt="Web app screenshot">
+                            <a href="https://driversaddiction.azurewebsites.net/"
+                                target="https://driversaddiction.azurewebsites.net/" class="rota">
+                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1700429181/my%20portfolio/da_screen_tpnugj.png">
                                 <div class="item-img-overlay"></div>
                             </a>
                             <div class="tags">
@@ -304,13 +303,13 @@
                                     <a href="#0">Reactjs</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Styled Components</a>
+                                    <a href="#0">Tailwind Css</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Hooks</a>
+                                    <a href="#0">React Hooks</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Local Storage</a>
+                                    <a href="#0">MongoDB</a>
                                 </span>
                             </div>
                         </div>
@@ -767,7 +766,7 @@
                                 <span class="icon pe-7s-call"></span>
                                 <div class="cont">
                                     <h6>Call Me</h6>
-                                    <p>(949) 232-0445</p>
+                                    <p>(949) 531-1105</p>
                                 </div>
                             </li>
                         </ul>
