--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img">
-                        <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1700425472/my%20portfolio/sT8fGh5F_400x400_a7bfyp.jpg"
+                        <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1751840589/Screenshot_2025-07-05_035807_x7bqzu.png"
                             alt="">
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <ul class="flex">
                         <li class="flex">
                             <div class="numb valign">
-                                <h3>3</h3>
+                                <h3>4</h3>
                             </div>
                             <div class="text valign">
                                 <p>Year <br> Of Experience</p>
@@ -131,7 +131,7 @@
                                     <div class="text valign">
                                         <div class="full-width">
                                             <p>Get In Touch</p>
-                                            <h6>g-sus-15@hotmail.com</h6>
+                                            <h6>codesforjenuel@gmail.com</h6>
                                         </div>
                                     </div>
                                     <div class="mail-icon">
@@ -752,14 +752,14 @@
                                 <span class="icon pe-7s-map-marker"></span>
                                 <div class="cont">
                                     <h6>Location</h6>
-                                    <p>Aliso Viejo, CA</p>
+                                    <p>Covina, CA</p>
                                 </div>
                             </li>
                             <li>
                                 <span class="icon pe-7s-mail"></span>
                                 <div class="cont">
                                     <h6>Email Me</h6>
-                                    <p>g-sus-15@hotmail.com</p>
+                                    <p>codesforjenuel@gmail.com</p>
                                 </div>
                             </li>
                             <li>
@@ -827,7 +827,7 @@
                                     alt="github" width="50px" height="50px"></a>
                         </div>
                         <div class="copy-right">
-                            <p>Jesus Perea© 2023.</p>
+                            <p>Jesus Perea© 2025.</p>
                         </div>
                     </div>
                 </div>
