replaced the z-lineup webapp with the Movie Scoper

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                         <li class="flex">
                             <div class="numb valign">
-                                <h3>13</h3>
+                                <h3>5</h3>
                             </div>
                             <div class="text valign">
                                 <p>Projects Completed</p>
@@ -253,33 +253,27 @@
                     <div class="col-md-6 items graphic lg-mr wow fadeInUp" data-wow-delay=".4s">
                         <div class="item-img">
                             <div class="cont">
-                                <h6> Nissan Z-Lineup</h6>
-                                <p>Web app designed to provide user with the Nissan z lineup information</p>
+                                <h6> Movie Scoper</h6>
+                                <p>Movie Scoper is a responsive web application that allows users to search and explore movies, TV shows, and actors using the TMDb API. Built with React, Vite, and Tailwind CSS, it features a modern UI, dynamic search functionality, and detailed pages for movies, shows, and cast members, providing an engaging and user-friendly browsing experience.</p>
                             </div>
-                            <a href="https://boiling-chamber-50325.herokuapp.com/"
-                                target="https://boiling-chamber-50325.herokuapp.com/" class="rota">
-                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1682099505/my%20portfolio/zlineup_jbgpyg.png"
+                            <a href="https://codesforjenuel.github.io/movie-scoper-app/"
+                                target="https://codesforjenuel.github.io/movie-scoper-app/" class="rota">
+                                <img src="/img/Screenshot 2025-09-08 002358.png"
                                     alt="web app screenshot">
                                 <div class="item-img-overlay"></div>
                             </a>
                             <div class="tags">
                                 <span>
-                                    <a href="#0">Html</a>
+                                    <a href="#0">Reactjs</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Css</a>
+                                    <a href="#0">Tailwind</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Javascript</a>
+                                    <a href="#0">TMDb API</a>
                                 </span>
                                 <span>
-                                    <a href="#0">Nodejs</a>
-                                </span>
-                                <span>
-                                    <a href="#0">Expressjs</a>
-                                </span>
-                                <span>
-                                    <a href="#0">MySQL</a>
+                                    <a href="#0">Vite</a>
                                 </span>
                             </div>
                         </div>
@@ -814,10 +808,6 @@
                                 target="https://www.linkedin.com/in/codesforjenuel/"><img
                                     src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649915982/my%20portfolio/linkedin_qguj6z.png"
                                     alt="linkedin" width="50px" height="50px"></a>
-                            <a href="https://twitter.com/codesforjenuel"
-                                target="https://twitter.com/codesforjenuel"><img
-                                    src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649922899/my%20portfolio/twitter-logo-2-1_ikdfe6.png"
-                                    alt="twitter" width="50px" height="50px"></a>
                             <a href="https://www.instagram.com/codesforjenuel/"
                                 target="https://www.instagram.com/codesforjenuel/"><img
                                     src="https://res.cloudinary.com/dkaeetuud/image/upload/v1649915984/my%20portfolio/instagram_zpc5pn.png"
