fixed the image url in the movie scoper card

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             </div>
                             <a href="https://codesforjenuel.github.io/movie-scoper-app/"
                                 target="https://codesforjenuel.github.io/movie-scoper-app/" class="rota">
-                                <img src="/img/Screenshot 2025-09-08 002358.png"
+                                <img src="https://res.cloudinary.com/dkaeetuud/image/upload/v1757323329/Screenshot_2025-09-08_002358_xgs4yg.png"
                                     alt="web app screenshot">
                                 <div class="item-img-overlay"></div>
                             </a>
